# spotify-data-pipeline

./: .gitignore  Makefile
.github/workflows/: spotify_ingest.yml
dashboard/: .env.example  README.md  index.html  package-lock.json  package.json  schema.sql  tsconfig.json  vite.config.ts
dashboard/api/: albums.ts  artists.ts  db.ts  genres.ts  last-synced.ts  periods.ts  songs.ts  stats.ts  timeline.ts  wrapped.ts
dashboard/src/: main.tsx
dashboard/src/app/: routes.tsx
dashboard/src/app/components/: DashboardLayout.tsx  SpotifyWrapped.tsx  mode-toggle.tsx
dashboard/src/app/components/pages/: Albums.tsx  Artists.tsx  Genres.tsx  Overview.tsx  Playlists.tsx  Songs.tsx  Timeline.tsx  WeeklyWrapped.tsx
dashboard/src/styles/: index.css
data-pipeline/: pyproject.toml
data-pipeline/ingestion/: config.py  extract.py
data-pipeline/spotify_transform/: dbt_project.yml  profiles.yml
data-pipeline/spotify_transform/models/: mart_album_stats_pivot.sql  mart_artist_stats_pivot.sql  mart_last_synced_at.sql  mart_song_stats_pivot.sql  sources.yml  stg_recently_played_at.sql
ingestion/: .gitignore  config.py  extract.py  main.py  models.py  pyproject.toml
ingestion/migrations/: env.py
ingestion/migrations/versions/: 3fccc340d996_create_bronze_tracks_table.py
